# DualMessenger

./: .gitignore  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
locale/: en-US.json  it.json
scripts/: setupTypeScript.js
src/: App.svelte  i18n.ts  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/adb/: commands.rs  mod.rs  types.rs  utils.rs
src/Pages/: App.svelte
src/components/: APKPicker.svelte  App.svelte  AppCard.svelte  Error.svelte  FilePicker.svelte  LoadingIcon.svelte  Modal.svelte  SysInfo.svelte
src/logic/: hashHistory.ts  selectFile.ts
src/routes/: AppList.svelte  DeviceList.svelte
src/styles/: global.css  global.scss
