[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Marko"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
sys-locale = "0.3.1"
which = "5.0.0"
text_io = "0.1.12"
derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.9", features = ["dialog-open", "process-command-api", "devtools"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
